<resources>
    <string name="app_name">Primula</string>
    <string name="menu">Меню</string>
    <string name="catalog">Каталог</string>
    <string name="basket">Корзина</string>
    <string name="favourites">Избранное</string>
    <string name="profile">Профиль</string>
    <string name="title">Выбор покупателей</string>
    <string name="go_out">Выйти</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="go_to_option">Go to option</string>
    <string name="option_icon">Option icon</string>
    <string name="active_orders">Нет активных заказов</string>
    <string name="cant_load_data">Невозможно загрузить данные</string>
    <string name="my_orders">"Мои заказы"</string>
    <string name="help">"Помощь"</string>
    <string name="to_cart">В корзину</string>
    <string name="Favorite">Избранное</string>
    <string name="number_of_products">%1$d товаров</string>
    <string name="cart">Корзина</string>
    <string name="total">Итого</string>
    <string name="order_price">Сумма заказа</string>
    <string name="discount">Скидка</string>
    <string name="total_price">Итоговая сумма</string>
    <string name="price_in_ruble">%1$d ₽</string>
    <string name="quantity">%1$d товара(ов)</string>
    <string name="discount_in_ruble">-%1$d ₽</string>
    <string name="to_order_registration">Перейти к оформлению</string>
    <string name="server_blocked">Сервер недоступен</string>
    <string name="feedbacks">Отзывы</string>
    <string name="description">Описание</string>
    <string name="charactreristics">Характеристика</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="no_desc">У данного товара отсутствует описание</string>
    <string name="in_stock">В наличии</string>
    <string name="email">Электронная почта</string>
    <string name="authorization_title">Войдите,чтобы начать покупки</string>
    <string name="password">Пароль</string>
    <string name="no_valid_email_or_password">Неправильный пароль или логин</string>
    <string name="enter">Войти</string>
    <string name="enter_fragment_title">Вход</string>
    <string name="registration_title">Регистрация</string>
    <string name="create_account_title">Создание аккаунта</string>
    <string name="phone_number">Номер телефона</string>
    <string name="reg_exception">Пользователь с такой почтой или номером уже зарегистрирован</string>
    <string name="accept_the_rights">Я согласен на обработку моих персональных данных</string>
    <string name="button_registration_name">Зарегистрироваться</string>
    <string name="enter_to_profile">Войти в профиль</string>
    <string name="empty_profile_description">Войдите или зарегистрируйтесь, чтобы сохранять товары и просматривать заказы</string>
    <string name="promotion_fragment_title">Акция</string>
    <string name="products_search">Поиск товаров</string>
    <string name="dialog_fragment_title">Какая досада…</string>
    <string name="dialog_description">Попытайтесь перезагрузить, может быть что-то и выйдет</string>
    <string name="no_valid_name">Имя не должно быть пустым,содержать 2 символа и начинаться с заглавной буквы</string>
    <string name="no_valid_surname">Фамилия не должна быть пустой,содержать 2 символа и начинаться с заглавной буквы</string>
    <string name="no_valid_number">Номер не должен быть пустым,содержать 11 символов и начинаться с 7 или 8</string>
    <string name="no_valid_email">Email не должен быть пустым и быть в верном формате</string>
    <string name="no_valid_password">Пароль не должен быть пустым и содержать не менее 8 символов</string>
    <string name="quantity_dialog_title">Введдите количество товара</string>
    <string name="quantity_error">Введите положительное число</string>
    <string name="in_cart">В корзине</string>
    <string name="image_gallery_uri">image/*</string>
    <string name="access_to_gallery_forbidden">Доступ к галерее запрещен</string>
    <string name="access_to_camera_forbidden">Доступ к камере запрещен</string>
    <string name="profile_photo_successfully_loaded">Фото профиля успешно изменено</string>
    <string name="cancel">Отмена</string>
    <string name="change_avatar">Изменить аватар профиля</string>
    <string name="take_picture">Сделать фото</string>
    <string name="load_from_device">Загрузить с устройства</string>
    <string name="reviews_title">Отзывы</string>
    <string name="review_experience_title">Опыт использования</string>
    <string name="advantages_title">Достоинства</string>
    <string name="disadvantages">Недостатки</string>
    <string name="comment_title">Комментарий</string>
    <string name="confirm_title">Верификация</string>
    <string name="confirm">Подтвердить</string>
    <string name="confirm_card_title">Отправьте код верификации, чтобы подтвердить почту</string>
    <string name="confirm_code">Код</string>
    <string name="no_valid_code">Введите верный код</string>
    <string name="cheked_box_exception">Вы должны согласить с условиями</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="date_exception">Дата должны быть в формате дд.мм.гггг</string>
    <string name="product_name">Продукт</string>
    <string name="producer">Производитель</string>
</resources>
