<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentContainerView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/deep_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAuthorization"
        android:layout_width="370dp"
        android:layout_height="280dp"
        android:layout_marginTop="140dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_cardTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:padding="16dp"
                android:text="@string/enter_to_profile"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TextView_card_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/empty_profile_description"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_cardTitle" />

            <ImageView
                android:id="@+id/ImageView_cartImage"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_shopping_cart_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextView_card_description" />

            <Button
                android:id="@+id/Button_to_authorization"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/enter_fragment_title"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:cornerRadius="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ImageView_cartImage" />

            <Button
                android:id="@+id/Button_to_registration"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/light_grey"
                android:text="@string/registration_title"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:cornerRadius="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ImageView_cartImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
