<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentContainerView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/deep_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/imageButton_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/left_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/confirm_title"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewConfirm"
        android:layout_width="370dp"
        android:layout_height="260dp"
        android:layout_marginTop="140dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAlignment="center"
                android:id="@+id/textView_cardTitle"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:fontFamily="@font/roboto"
                android:padding="16dp"
                android:text="@string/confirm_card_title"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInput_code"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:hint="@string/confirm_code"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusTopStart="18dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/normal_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/TextView_valid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/no_valid_code"
                android:textColor="@color/deep_orange"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/TextInput_code"
                app:layout_constraintTop_toBottomOf="@id/TextInput_code" />

            <Button
                android:id="@+id/Button_confirm"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextInput_code" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
